# iced_webview_v2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cef-link-flags.sh  manifest-cef.scm  manifest.scm  publish.sh
.github/workflows/: publish.yml  rust.yml
examples/: email.rs  embedded_webview.rs  multi_webview.rs  webview.rs
src/: engines.rs  fetch.rs  lib.rs  util.rs  webview.rs
src/engines/: blitz.rs  cef_engine.rs  litehtml.rs  servo.rs  ultralight.rs
src/webview/: advanced.rs  basic.rs  shader_widget.rs
