[package]
name = "iced_webview_v2"
version = "0.0.7"
edition = "2021"
rust-version = "1.81.0"
description = "An easily embedded webview library for iced"
authors = ["LegitCamper", "Franz Geffke <mail@gofranz.com>"]
repository = "https://github.com/franzos/iced_webview_v2/"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "iced_webview"

[package.metadata.docs.rs]
features = ["docs_only"]
all-features = false
no-default-features = true

[profile.dev]
incremental = true
opt-level = "s"
lto = "thin"

[features]
default = ["ultralight"]
ultralight = ["dep:ul-next"]
ultralight-resources = []
litehtml = ["dep:litehtml", "dep:reqwest"]
docs_only = []

[dependencies]
clipboard-rs = "0.2.1"
iced = { version = "0.14", features = ["advanced", "image", "tokio", "lazy"] }
rand = "0.8.5"
smol_str = "0.2.2"
ul-next = { version = "0.4", optional = true }
litehtml = { version = "0.2.2", features = ["pixbuf", "html"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
url = "2.5.2"
html = "0.6.3"

[[example]]
name = "email"

[[example]]
name = "embedded_webview"

[[example]]
name = "multi_webview"
