[package]
name = "iced_webview_v2"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "An easily embedded webview library for iced"
authors = ["LegitCamper", "Franz Geffke <mail@gofranz.com>"]
repository = "https://github.com/franzos/iced_webview_v2/"
license = "Apache-2.0"
readme = "README.md"

[lib]
name = "iced_webview"

[package.metadata.docs.rs]
features = ["docs_only"]
all-features = false
no-default-features = true

[profile.dev]
incremental = true
opt-level = "s"
lto = "thin"

[features]
default = ["blitz"]
blitz = [
    "dep:blitz-dom",
    "dep:blitz-html",
    "dep:blitz-paint",
    "dep:blitz-traits",
    "dep:blitz-net",
    "dep:anyrender",
    "dep:anyrender_vello_cpu",
    "dep:peniko",
    "dep:cursor-icon",
    "dep:keyboard-types",
    "dep:reqwest",
    "dep:tokio",
]
litehtml = ["dep:litehtml", "dep:reqwest"]
docs_only = []

[dependencies]
iced = { version = "0.14", features = ["advanced", "image", "tokio", "lazy"] }
rand = "0.8.5"
litehtml = { version = "0.2.3", features = ["pixbuf", "html"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
url = "2.5.2"
blitz-dom = { version = "0.2", optional = true }
blitz-html = { version = "0.2", optional = true }
blitz-paint = { version = "0.2", optional = true }
blitz-traits = { version = "0.2", optional = true }
blitz-net = { version = "0.2", optional = true }
anyrender = { version = "0.6", optional = true }
anyrender_vello_cpu = { version = "0.8", optional = true }
peniko = { version = "0.5", optional = true }
cursor-icon = { version = "1", optional = true }
keyboard-types = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[[example]]
name = "email"

[[example]]
name = "embedded_webview"

[[example]]
name = "multi_webview"
